hphp/hack/test/typecheck/new_inference/untypeable/closure.php.like_types.exp
File "closure.php", line 15, characters 10-27:
Cannot determine types of lambda parameters in strict mode. Please add type hints on parameters. (Typing[4224])
File "closure.php", line 25, characters 17-18:
Invalid argument (Typing[4110])
File "closure.php", line 4, characters 11-11:
Some type constraint(s) are violated here
File "closure.php", line 4, characters 11-11:
T is a constrained type parameter
File "closure.php", line 18, characters 24-29:
Expected string
File "closure.php", line 4, characters 11-11:
But got dynamic
